--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.gitignore.io/api/ruby
 # Edit at https://www.gitignore.io/?templates=ruby
 
+
+.DS_Store
+
 ### Ruby ###
 *.gem
 *.rbc
